Fixed footer on small cell phones

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -268,6 +268,9 @@ body {
   flex-direction: column;
   width: 100vw;
   background-color: #1a2238; }
+  @media (max-width: 596px) {
+    .footer__width {
+      width: 26rem; } }
   .footer__top {
     display: flex;
     align-items: center;
